--- a/css/style.css
+++ b/css/style.css
@@ -3,6 +3,10 @@ body,div,dl,dt,dd,ul,ol,li,h1,h2,h3,h4,h5,h6,pre,code,form,fieldset,legend,input
     padding: 0;
 }
 
+ul{
+    list-style: none;
+}
+
 html {
     height: 100%;
     overflow: hidden;
@@ -17,16 +21,16 @@ body {
 
 #gallery {
     padding: 50px;
+    display: flex;
+    flex-wrap: wrap;
 }
 
 #gallery li {
     width: 10%;
     box-sizing: border-box;
-    list-style: none;
     perspective: 100px;
     -webkit-perspective: 100px;
     padding: 1px;
-    float: right;
     position: relative;
     transition: .1s;
     -webkit-transition: 0.1s;
